--- a/public/chat.html
+++ b/public/chat.html
@@ -47,7 +47,7 @@
 
     <script id="user-template" type="text/html">
         <h2 class="room-title">{{room}}</h2>
-        <h3 class="list-title">Users</h3>
+        <h3 class="list-title">Online🟢</h3>
         <ul class="users">
             {{#users}}
             <li>{{username}}</li>
