--- a/public/chat.html
+++ b/public/chat.html
@@ -41,7 +41,7 @@
                     <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
-                <p><a href="{{url}}" target="_blank">My current location</a></p>
+                <p><a href="{{url}}" target="_blank">My current location!</a></p>
             </div>
         </script>
 
